# Project

./: private.key  public.key
Presence Sensor Integration with Configurable Light Control/: CMakeLists.txt  sdkconfig
Presence Sensor Integration with Configurable Light Control/components/: CMakeLists.txt
Presence Sensor Integration with Configurable Light Control/components/include/: config.h  nvs_storage.h  pwm_control.h  sensor_uart.h  uart_pc.h
Presence Sensor Integration with Configurable Light Control/components/src/: nvs_storage.c  pwm_control.c  sensor_uart.c  uart_pc.c
Presence Sensor Integration with Configurable Light Control/main/: main.c
Project_1/: 1.c  CMakeLists.txt
Project_1/components/reeva/: CMakeLists.txt
Project_1/components/reeva/Include/: light_control.h  nvs_storage.h  pwm_control.h  uart_handler.h
Project_1/components/reeva/Src/: nvs_storage.c  pwm_control.c  uart_handler.c
Project_1/main/: CMakeLists.txt  main.c
